--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,8 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_full_profile">Full Profile</string>
 
+    <string name="title_activity_login">LoginActivity</string>
+    <string name="login_button">Login with LinkedIn</string>
+    <string name="login_title_content">Food\nFor\nThought</string>
+
 </resources>
