--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,10 +6,13 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_full_profile">Full Profile</string>
 
+    <string name="chat_text_field_hint">Say hello!</string>
+    <string name="chat_button_send">Send</string>
     <string name="title_activity_login">LoginActivity</string>
     <string name="login_button">Login with LinkedIn</string>
     <string name="login_title_content">Food For Thought</string>
     <string name="title_activity_debug_directory">DebugDirectoryActivity</string>
     <string name="title_activity_launcher">LauncherActivity</string>
+    <string name="title_activity_chat_application">ChatApplicationActivity</string>
 
 </resources>
